--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -13,7 +13,7 @@
         bootstrap="vendor/autoload.php">
     <testsuites>
         <testsuite name="General Test Suite for Wrike Bundle">
-            <directory suffix="Test.php">./tests/</directory>
+            <directory suffix="Test.php">./Tests/</directory>
         </testsuite>
     </testsuites>
     <filter>
@@ -23,8 +23,8 @@
             <directory suffix=".php">./src/</directory>
             <exclude>
                 <directory>./build/</directory>
-                <directory>./docs/</directory>
-                <directory>./tests/</directory>
+                <directory>./Repository/</directory>
+                <directory>./Tests/</directory>
                 <directory>./vendor/</directory>
             </exclude>
         </whitelist>
