Test sensiolabs/security-checker and  satooshi/php-coveralls on Travis

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -23,7 +23,7 @@
             <directory suffix=".php">./</directory>
             <exclude>
                 <directory>./build/</directory>
-                <directory>./Repository/</directory>
+                <directory>./Resources/</directory>
                 <directory>./Tests/</directory>
                 <directory>./vendor/</directory>
             </exclude>
