--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -29,4 +29,9 @@
             </exclude>
         </whitelist>
     </filter>
+    <php>
+        <ini name="error_reporting" value="-1" />
+        <ini name="intl.default_locale" value="en" />
+        <ini name="intl.error_level" value="0" />
+    </php>
 </phpunit>
