php-cs-fix version update

--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "symfony/yaml": "~2.3|~3.0",
         "symfony/console": "~2.3|~3.0",
         "phpunit/phpunit": ">=4.0,<6.0",
-        "fabpot/PHP-CS-Fixer": "^2.0"
+        "friendsofphp/php-cs-fixer": "^2.0"
     },
     "autoload": {
         "psr-4": {"Zibios\\Bundle\\WrikeBundle\\": ""}
