--- a/.travis.yml
+++ b/.travis.yml
@@ -9,17 +9,18 @@ before_script:
   - composer self-update
   - composer require codeclimate/php-test-reporter --dev
   - composer require sensiolabs/security-checker --dev
-  - composer require satooshi/php-coveralls --dev
+  - composer require php-coveralls/php-coveralls --dev
   - composer install
 script:
   - mkdir -p build
   - vendor/bin/phpunit --coverage-clover build/clover.xml
-  - vendor/bin/security-checker security:check
+  - vendor/bin/security-checker security:check --end-point=http://security.sensiolabs.org/check_lock
 after_script:
   - wget https://scrutinizer-ci.com/ocular.phar
   - php ocular.phar code-coverage:upload --format=php-clover build/clover.xml
   - vendor/bin/test-reporter --coverage-report=build/clover.xml
-  - vendor/bin/coveralls
+after_success:
+  - travis_retry php vendor/bin/php-coveralls
 addons:
   code_climate:
     repo_token: 06197a41cf94132d7bacab1a00409cf12b804c6c94dbaba65a8fdb76ad9abe1e
